[package]
name = "routerifybug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
routerify = "3.0.0"
tokio = { version = "1.20.1", features = ["full"] }
